# pynanoclaw

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  alembic.ini  checkpython.sh  config.yml  credentials.yml.dist  pyproject.toml
.claude/skills/factcheck/: SKILL.md
.claude/skills/qa-chrome/: SKILL.md
.claude/skills/qa-php/: SKILL.md
.claude/skills/qa-python/: SKILL.md
.claude/skills/qa-text/: SKILL.md
.claude/skills/setup/scripts/: 02-install-deps.sh  08-setup-service.sh
.claude/skills/writing-style-analysis/: SKILL.md
_archive/: README.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
container/: Dockerfile  build.sh
container/agent-runner/src/: main.py
docs/: REQUIREMENTS.md  orientation.md  prd.md  python-migration.md  rules-chrome-ext.md  rules-php.md
launchd/: com.nanoclaw.plist
output/: 2026-02-20-1500-factcheck-post-rewrite.md  2026-02-20-factcheck-audit.md
src/nanoclaw/: __main__.py  config.py  container.py  ipc.py  main.py  queue.py  router.py  scheduler.py  types.py
src/nanoclaw/channels/: base.py  whatsapp.py
src/nanoclaw/db/: models.py  operations.py
tests/: test_channels.py  test_config.py  test_container.py  test_db.py  test_ipc.py  test_main.py  test_queue.py  test_router.py  test_scheduler.py
